# gecs

./: .gitignore  .order  CHANGELOG  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: data.rs  lib.rs
macros/src/generate/: cfg.rs  mod.rs  query.rs  util.rs  world.rs
macros/src/parse/: attribute.rs  cfg.rs  mod.rs  name.rs  query.rs  util.rs  world.rs
src/: entity.rs  error.rs  event.rs  index.rs  iter.rs  lib.rs  traits.rs  util.rs  version.rs
src/archetype/: components.rs  entries.rs  iter.rs  mod.rs  slices.rs  slot.rs  storage.rs  storage_dynamic.rs  storage_fixed.rs  view.rs
tests/: test_basic.rs  test_bind.rs  test_borrow.rs  test_clone.rs  test_direct.rs  test_entity_wild.rs  test_events.rs  test_generic.rs  test_generic_components.rs  test_generic_consts.rs  test_generic_types.rs  test_impls.rs  test_invalid_checks.rs  test_iter.rs  test_iter_destroy.rs  test_iter_remove.rs  test_multi.rs  test_one_of.rs  test_query_cfg.rs  test_raw.rs  test_select.rs  test_select_view.rs  test_simple.rs  test_single.rs  test_single_dyn.rs  test_util.rs
