[package]
name = "gecs"
version = "0.3.0"
authors = ["recatek"]
description = "A generated entity component system."
edition = "2021"
repository = "https://github.com/recatek/gecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines"]

[features]
default = []
32_components = []
# Wrap rather than panic when a version number overflows (4,294,967,295 max)
wrapping_version = []

[dependencies]
gecs_macros = { version = "0.3.0", path = "macros", default-features = false }

seq-macro = { version = "0.3.5" } # For building "variadic" storage
