[package]
name = "gecs"
version = "0.3.0"
authors = ["recatek"]
description = "A generated entity component system."
edition = "2021"
repository = "https://github.com/recatek/gecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines"]

[features]
default = ['events']

# Allow archetypes to have up to 32 components (default is 16). Worsens compile times.
32_components = []

# Wrap rather than panic when a version number overflows (4,294,967,295 max). Yields some small perf gains when
# creating/destroying entities, but has a (probabilistically insignificant) risk of allowing reuse of stale handles.
wrapping_version = []

# Adds event tracking for entity creation/destruction. Has the following perf consequences:
# - Adds some additional allocation overhead to the ECS system for each per-archetype queue.
# - Every entity creation or destruction pushes an event to an archetype's queue.
# - Event queues will accumulate indefinitely and must be regularly drained.
events = ['gecs_macros/events']

[dependencies]
gecs_macros = { version = "0.3.0", path = "macros", default-features = false }

seq-macro = { version = "0.3" } # For building "variadic" storage
