[package]
name = "gecs_macros"
version = "0.0.1"
authors = ["recatek"]
description = "Procedural macros for the gecs crate."
edition = "2021"
repository = "https://github.com/recatek/gecs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
convert_case = { version = "0.6" }
lazy_static = { version = "1.4" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Serialization for passing world data to queries
base64 = { version = "0.21" }
speedy = { version = "0.8" }
